Fix navbar spacing

--- a/frontend/public/stylesheets/nav.css
+++ b/frontend/public/stylesheets/nav.css
@@ -21,7 +21,7 @@ a {
     font-size: 28px;
 }
 
-.navbar-sisu {
+.navbar-sisu, .welcome-message {
     height: 75px;
     display: flex;
     justify-content: flex-start;
@@ -39,6 +39,28 @@ a {
     cursor: pointer;
 }
 
-.nav-signup:hover, .nav-login:hover {
+.nav-signup:hover, .nav-login:hover, .nav-logout:hover {
     color: green;
 }
+
+.welcome-message > h1 {
+    margin-left: 20px;
+    text-transform: uppercase;
+    font-size: 15px;
+}
+
+.logout-container {
+    position: absolute;
+    right: 0;
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    cursor: pointer;
+}
+
+.nav-logout {
+    margin-right: 10px;
+}
+
